# embedded-engine

./: Cargo.toml  README.md  bundle.js  index.html
.cargo/: config.toml
.github/workflows/: ci_checks.yml
assets/aseprite/: full_tileset.ase  full_tileset_as_sprites.ase  player_tileset.ase
pkg/: README.md  embedded_engine.d.ts  embedded_engine.js  embedded_engine_bg.wasm  embedded_engine_bg.wasm.d.ts  package.json
src/: lib.rs  main.rs
src/engine/: alloc.rs  display.rs  interaction_layer.rs  mod.rs  sound_player.rs  tones.rs  types.rs
src/engine/clock/: arm.rs  mod.rs
src/engine/hal/: mod.rs
src/engine/hal/arm/: clock.rs  display.rs  mod.rs  peripherals_io.rs
src/engine/hal/wasm32/: display.rs  mod.rs
src/engine/peripherals/: arm.rs
src/game/: mod.rs  world_actor_abstractions.rs
src/game/actors/: mod.rs  player.rs  static_actor.rs
src/game/sounds/: mod.rs
src/game/sprites/: mod.rs  spritesheet.embsprite
src/game/worlds/: main_world.rs  mod.rs
www/: index.html  index.js  package-lock.json  package.json  webpack.config.js  webpack.dev.config.js
