[package]
edition = "2024"
name = "embedded-engine"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

# DEPENDENCIES
[dependencies]
variant_count = "1.2"
iter_variants = "0.2.0"
postcard = "1.1.3"

# PICO-ONLY DEPENDENCIES
[target.'cfg(target_arch = "arm")'.dependencies]
libm = "0.2.15"
cortex-m = "0.7.6"
cortex-m-rt = "0.7"
embedded-hal = { version = "1.0.0" }
defmt = "0.3"
defmt-rtt = "0.4.0"
panic-probe = { version = "0.3.1", features = ["print-defmt"] }
rp-pico = { version = "0.9", features = ["critical-section-impl"] }
portable-atomic = { version = "1", features = ["critical-section"] }
once_cell = { version = "1.21.3", default-features = false, features = [
    "critical-section",
] }
critical-section = "1.2"
embedded-alloc = { version = "0.6", features = ["tlsf"] }
bytemuck = "1.23.2"
serde = { version = "1.0.*", default-features = false, features = [
    "derive",
    "alloc",
] }

# WASM-ONLY DEPENDENCIES
[target.'cfg(target_arch = "wasm32")'.dependencies]
log = "0.4"
console_log = "1"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "console",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "Performance",
    "KeyboardEvent",
    "BaseAudioContext",
    "AudioContext",
    "AudioNode",
    "OscillatorType",
    "OscillatorNode",
    "AudioDestinationNode",
    "AudioParam",
] }
wasm-bindgen-futures = "0.4.50"
gloo-timers = { version = "0.3", features = ["futures"] }
gloo = { version = "0.11", features = ["utils"] }
serde = { version = "1.0.*", default-features = false, features = ["derive"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.2"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
